apps/tests/whoami/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: whoami-test
spec:
  parentRefs:
    - name: public
      namespace: traefik
      sectionName: http

  hostnames:
    - whoami.home.arpa

  rules:
    - backendRefs:
        - name: whoami
          port: 80
