apps/tests/whoami/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whoami-test
  labels:
    gateway-access: public
